# steck

./: .travis.yml  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  steck.py  steck.toml-dist
.github/workflows/: pypi-test-publish.yml
doc/: autodoc.rst  conf.py  configuration.rst  index.rst
