[tool.poetry]
name = "steck"
version = "0.8.0-dev"
description = "Client for pinnwand pastebin."
authors = ["supakeen <cmdr@supakeen.com>"]
license = "MIT"
readme = "README.md"
keywords = ["pastebin"]
repository = "https://github.com/supakeen/steck"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4"
click = ">=8.0"
requests = "^2.31.0"
python-magic = "^0.4.15"
termcolor = "^2.3.0"
appdirs = "^1.4.3"
toml = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
coverage = "^7.3"
black = { version = "*", allow-prereleases = true }
pytest-cov = "^4.1"
pre-commit = "^3.3"
flake8 = "^6.1"
mypy = "^1.5.1"

[tool.black]
line-length = 80
target_version = ["py36"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.eggs
  | \.mypy_cache
  | \.tox
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[tool.poetry.scripts]
steck = 'steck:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
